--- a/DynamicConfig.ini
+++ b/DynamicConfig.ini
@@ -1,2 +1,3 @@
-DynamicColorset=DeepPink
-DynamicColorSetChanceOverride=0.0
+ActiveEventColors=custom
+DynamicColorset=Turquoise,White,DarkMagenta,Dino Deep Blue,Cyan,Orange
+DynamicColorSetChanceOverride=0.35
